<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PermissionsApp</string>
    <string name="title_main">PermissionsApp</string>
    <string name="main_button3">Bookmarks Activity</string>
    <string name="main_button4">Converter Activity</string>
    <string name="title_permissions">Permissions</string>
    <string name="perms_button1">Get Bookmarks</string>
    <string name="perms_button2">Go To DangerousActivity</string>
    <string name="place_holder">Bookmarks Go Here</string>
    <string name="title_activity_customization">Customization</string>
    <string name="cust_button1">Start Dangerous Activity</string>
    <string name="cust_message">This button will load a Dangerous Level activity</string>
    <string name="TemperatureConverter_Header">Temperature Converter</string>
    <string name="editText_TemperatureToolTip">Enter temperature here</string>
    <string name="radio_ToFahrenheit">to Fahrenheit</string>
    <string name="radio_ToCelsius">to Celsius</string>
    <string name="btn_ConvertTemperature">Convert</string>
    <string name="btn_ClearTemperature">Clear</string>

</resources>