<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- TODO implement the UI here... -->
    <TextView
        android:id="@+id/header_TemperatureApp"
        android:text="@string/TemperatureConverter_Header"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textSize="@dimen/dimen_Density"
        android:layout_marginBottom = "@dimen/dimen_Density"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint= "@string/editText_TemperatureToolTip"/>
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/radioBtn_ToFahrenheit"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/radio_ToFahrenheit" />

        <RadioButton
            android:id="@+id/radioBtn_ToCelsius"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/radio_ToCelsius" />

    </RadioGroup>

    <Button
        android:id="@+id/btn_Convert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_ConvertTemperature"/>
    <Button
        android:id="@+id/btn_Clear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_ClearTemperature"
        android:layout_marginBottom = "@dimen/dimen_Density"/>
    <TextView
        android:id="@+id/tv_Result"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="NN Celsius is NN Fahrenheit"
        android:gravity="center_horizontal"/>



</LinearLayout>